[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
uuid = "0.8.2"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.21"